--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <span id="attempts">0</span>
         </div>
         <div class="info">
-          <p>Your previous guesses</p>
+          <p>Your previous guesses:</p>
           <span id="guesses">-</span>
         </div>
       </section>
